Add JS in 404 to redirect

--- a/404.html
+++ b/404.html
@@ -1,7 +1,12 @@
 <!DOCTYPE html>
 <html>
-   <head>
-      <title>The Roots Engine</title>
-      <meta http-equiv = "refresh" content = "0; url = https://rootsengine.com" />
-   </head>
+
+<head>
+    <title>The Roots Engine</title>
+    <!-- <meta http-equiv="refresh" content="0; url = https://rootsengine.com" /> -->
+    <script>
+        location.replace("https://rootsengine.com" + window.location.pathname);
+    </script>
+</head>
+
 </html>
